web-infras/parser/tests/fixtures/babel/core/uncategorised/457/output.txt
[SyntaxError]: Illegal continue statement: no surrounding iteration statement. (1,23)
1|switch (x) { default: continue; }
 |                     ^
